--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       >
       </lord-icon>
       <span data-tilt data-tilt-scale="1.1"
-        ><h1>SCHOOL MANAGEMENT SYSTEM</h1></span
+        ><h1 class="Bigtext">SCHOOL MANAGEMENT SYSTEM</h1></span
       >
       <span class="glass glass1">
         <a
@@ -63,8 +63,12 @@
 
     <div class="SmallDevices">
       <h1>I Already Told you to not to open it on your mobile</h1>
-      <h2>Open it on Laptop </h2>
+      <h2>Open it on Laptop</h2>
       <h1>😡</h1>
+      <p>
+        Tap on screen for Special Messages . Listen the message and then again
+        tap on screen for next message.
+      </p>
     </div>
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <script src="./index.js"></script>
