Provided demo Passwords for login

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             >Click here to download</a
           >
           <br />
+          Admin Login Credentials :
+          <br />
+          Username : ROYAL
+          <br />
+          Password : Admin123!@#
+          <br />
           Click anywhere to go back</span
         ></span
       >
@@ -49,6 +55,7 @@
         ><p data-tilt data-tilt-scale="1.2">Teacher</p>
         <span class="glass-message" data-tilt data-tilt-scale="1.1"
           >Click on Admin and follow the instructions <br />
+          Default Password : pass <br />
           Click anywhere to go back</span
         ></span
       >
@@ -56,6 +63,7 @@
         ><p data-tilt data-tilt-scale="1.2">Student</p>
         <span class="glass-message" data-tilt data-tilt-scale="1.1"
           >Click on Admin and follow the instructions <br />
+          Default Password : pass <br />
           Click anywhere to go back</span
         ></span
       >
