--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         ><span class="glass-message" data-tilt data-tilt-scale="1.1"
           >Run The Downloaded File <br />
           If it's not downloaded then <br />
-          <a href="./schollmanagementPF.exe" class="downloadagain"
+          <a href="./SchoolManagement.exe" class="downloadagain"
             >Click here to download</a
           >
           <br />
