--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <span class="glass glass1">
         <a
           download
-          href="./schollmanagementPF.exe"
+          href="./SchoolManagement.exe"
           data-tilt
           data-tilt-scale="1.2"
           >Admin</a
